--- a/src/main/resources/segGroupCW/css/themes/dark.css
+++ b/src/main/resources/segGroupCW/css/themes/dark.css
@@ -33,15 +33,17 @@
 }
 
 .card{
-    -fx-background-color: -secondary;
+    -fx-background-color: white;
     -fx-background-radius: 15%;
     -fx-border-radius: 15%;
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
+    -fx-text-fill: black;
 }
 
 .card-corners{
-    -fx-background-color: -secondary;
+    -fx-background-color: white;
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
+    -fx-text-fill: black;
 }
 
 .page-title{
