--- a/src/main/resources/segGroupCW/dashboard.fxml
+++ b/src/main/resources/segGroupCW/dashboard.fxml
@@ -1,27 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="875.0" prefWidth="938.0" stylesheets="@css/dashboard.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="875.0" prefWidth="980.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
    <children>
-      <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="938.0">
+      <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="980.0">
          <children>
-            <Pane prefHeight="100.0" prefWidth="246.0">
+            <Pane prefHeight="100.0" prefWidth="411.0">
                <children>
                   <Label fx:id="dashBoardLabel" layoutX="-30.0" layoutY="15.0" prefHeight="70.0" prefWidth="285.0" styleClass="text-primary" text="Dashboard">
                      <font>
@@ -31,19 +23,16 @@
                </children></Pane>
             <Pane fx:id="topHBox" prefHeight="100.0" prefWidth="370.0">
                <children>
-                  <Label layoutX="130.0" layoutY="36.0" prefHeight="17.0" prefWidth="176.0" styleClass="campaign-title" text="Campaign 1" />
+                  <Label layoutX="130.0" layoutY="36.0" prefHeight="17.0" prefWidth="176.0" styleClass="campaign-title" />
                </children>
             </Pane>
             <Pane prefHeight="100.0" prefWidth="162.0">
                <children>
-                  <JFXButton fx:id="settingsButton" buttonType="RAISED" layoutX="85.0" layoutY="27.0" mnemonicParsing="false" onAction="#settingsPage" prefHeight="42.0" prefWidth="57.0" ripplerFill="#fdfdfd" text=" ">
-                     <cursor>
-                        <Cursor fx:constant="NONE" />
-                     </cursor>
+                  <JFXButton fx:id="settingsButton" buttonType="RAISED" layoutX="85.0" layoutY="27.0" mnemonicParsing="false" onAction="#settingsPage" prefHeight="42.0" prefWidth="57.0" text=" ">
                      <graphic>
                         <ImageView fx:id="houseImageView1" fitHeight="39.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="file:/C:/Users/ivash/IdeaProjects/segGroupCW/src/main/resources/assets/app-22-cog-512.png" />
+                              <Image url="@/assets/app-22-cog-512.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -51,7 +40,7 @@
                </children></Pane>
          </children>
       </HBox>
-      <ScrollPane layoutX="176.0" layoutY="100.0" prefHeight="772.0" prefWidth="763.0">
+      <ScrollPane layoutX="176.0" layoutY="100.0" prefHeight="772.0" prefWidth="802.0">
          <content>
             <VBox prefHeight="1144.0" prefWidth="788.0">
                <children>
@@ -117,7 +106,7 @@
                                        <graphic>
                                           <ImageView fx:id="pencilButton" fitHeight="35.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@../assets/School_Study_Student_Education_Pencil-512.png" />
+                                                <Image url="@/assets/School_Study_Student_Education_Pencil-512.png" />
                                              </image></ImageView>
                                        </graphic>
                                     </JFXButton>
@@ -371,23 +360,23 @@
             </VBox>
          </content>
       </ScrollPane>
-      <VBox fx:id="testPane" layoutY="100.0" prefHeight="772.0" prefWidth="176.0" style="-fx-background-color: #5988FF;">
+      <VBox fx:id="testPane" layoutY="100.0" prefHeight="772.0" prefWidth="176.0">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="718.0" prefWidth="176.0" spacing="20.0" style="-fx-background-color: #5988FF;">
+            <VBox alignment="TOP_CENTER" prefHeight="718.0" prefWidth="176.0" spacing="20.0">
                <padding>
                   <Insets left="10.0" right="10.0" top="10.0" />
                </padding>
                <children>
-                  <Label text="Filter" textFill="#f5f4f4">
+                  <Label styleClass="checkbox-text" text="Filter">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
                   <VBox prefHeight="97.0" prefWidth="156.0" spacing="10.0">
                      <children>
-                        <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="151.0" text="Gender" textFill="WHITE" />
-                        <JFXCheckBox fx:id="femaleCheckBox" text="Female" textFill="WHITE" />
-                        <JFXCheckBox fx:id="maleCheckbox" text="Male" textFill="#f7f3f3" />
+                        <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="151.0" styleClass="checkbox-text" />
+                        <JFXCheckBox fx:id="femaleCheckBox" styleClass="checkbox-text" text="Female" />
+                        <JFXCheckBox fx:id="maleCheckbox" styleClass="checkbox-text" text="Male" />
                      </children>
                      <padding>
                         <Insets left="10.0" top="10.0" />
@@ -395,12 +384,12 @@
                   </VBox>
                   <VBox prefHeight="183.0" prefWidth="156.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="17.0" prefWidth="138.0" text="Age" textFill="#f8f6f6" />
-                        <JFXCheckBox fx:id="age1Checkbox" text="&lt; 25 years" textFill="#fffefe" />
-                        <JFXCheckBox fx:id="age2Checkbox" text="25 - 34 years" textFill="#fffdfd" />
-                        <JFXCheckBox fx:id="age3Checkbox" text="35 - 44 years" textFill="#fdfcfc" />
-                        <JFXCheckBox fx:id="age4Checkbox" text="45 - 54 years" textFill="#f7f1f1" />
-                        <JFXCheckBox fx:id="age5Checkbox" text="&gt; 54 years" textFill="#faf9f9" />
+                        <Label prefHeight="17.0" prefWidth="138.0" styleClass="checkbox-text" text="Age" />
+                        <JFXCheckBox fx:id="age1Checkbox" styleClass="checkbox-text" text="&lt; 25 years" />
+                        <JFXCheckBox fx:id="age2Checkbox" styleClass="checkbox-text" text="25 - 34 years" />
+                        <JFXCheckBox fx:id="age3Checkbox" styleClass="checkbox-text" text="35 - 44 years" />
+                        <JFXCheckBox fx:id="age4Checkbox" styleClass="checkbox-text" text="45 - 54 years" />
+                        <JFXCheckBox fx:id="age5Checkbox" styleClass="checkbox-text" text="&gt; 54 years" />
                      </children>
                      <padding>
                         <Insets left="10.0" top="10.0" />
@@ -408,10 +397,10 @@
                   </VBox>
                   <VBox prefHeight="131.0" prefWidth="156.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="17.0" prefWidth="133.0" text="Income" textFill="#f8f7f7" />
-                        <JFXCheckBox fx:id="lowIncomeCheckbox" text="Low" textFill="#f8f7f7" />
-                        <JFXCheckBox fx:id="MediumIncomeCheckbox" text="Medium" textFill="#f8f7f7" />
-                        <JFXCheckBox fx:id="highIncomeCheckbox" text="High" textFill="#f8f7f7" />
+                        <Label prefHeight="17.0" prefWidth="133.0" styleClass="checkbox-text" text="Income" />
+                        <JFXCheckBox fx:id="lowIncomeCheckbox" styleClass="checkbox-text" text="Low" />
+                        <JFXCheckBox fx:id="MediumIncomeCheckbox" styleClass="checkbox-text" text="Medium" />
+                        <JFXCheckBox fx:id="highIncomeCheckbox" styleClass="checkbox-text" text="High" />
                      </children>
                      <padding>
                         <Insets left="10.0" top="10.0" />
@@ -419,23 +408,26 @@
                   </VBox>
                   <VBox prefHeight="236.0" prefWidth="156.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="17.0" prefWidth="143.0" text="Context" textFill="#fdfafa" />
-                        <JFXCheckBox fx:id="shoppingCheckbox" text="Shopping" textFill="#fdfafa" />
-                        <JFXCheckBox fx:id="newsCheckbox" text="News" textFill="#fdfafa" />
-                        <JFXCheckBox fx:id="blogCheckbox" text="Blog" textFill="#fdfafa" />
-                        <JFXCheckBox fx:id="socialMCheckbox" text="Social Media" textFill="#fdfafa" />
-                        <JFXCheckBox fx:id="hobbiesCheckbox" text="Hobbies" textFill="#fdfafa" />
-                        <JFXCheckBox fx:id="travelCheckbox" text="Travel" textFill="#fdfafa" />
+                        <Label prefHeight="17.0" prefWidth="143.0" styleClass="checkbox-text" text="Context" />
+                        <JFXCheckBox fx:id="shoppingCheckbox" styleClass="checkbox-text" text="Shopping" />
+                        <JFXCheckBox fx:id="newsCheckbox" styleClass="checkbox-text" text="News" />
+                        <JFXCheckBox fx:id="blogCheckbox" styleClass="checkbox-text" text="Blog" />
+                        <JFXCheckBox fx:id="socialMCheckbox" styleClass="checkbox-text" text="Social Media" />
+                        <JFXCheckBox fx:id="hobbiesCheckbox" styleClass="checkbox-text" text="Hobbies" />
+                        <JFXCheckBox fx:id="travelCheckbox" styleClass="checkbox-text" text="Travel" />
                      </children>
                      <padding>
                         <Insets left="10.0" top="10.0" />
                      </padding>
                   </VBox>
-                  <JFXButton fx:id="applyFilterButton" buttonType="RAISED" onAction="#applyFilter" prefHeight="38.0" prefWidth="127.0" style="-fx-background-color: #ffffff;" text="Apply" />
-                  <JFXButton fx:id="clearFilterButton" buttonType="RAISED" onAction="#clearFilter" prefHeight="25.0" prefWidth="128.0" style="-fx-background-color: #ffffff;" text="Clear Filter" textFill="#110f0f" />
+                  <JFXButton fx:id="applyFilterButton" buttonType="RAISED" onAction="#applyFilter" prefHeight="38.0" prefWidth="127.0" styleClass="btn-primary" text="Apply" />
+                  <JFXButton fx:id="clearFilterButton" buttonType="RAISED" onAction="#clearFilter" prefHeight="25.0" prefWidth="128.0" styleClass="btn-primary" text="Clear Filter" textFill="#110f0f" />
                </children>
             </VBox>
          </children>
       </VBox>
    </children>
+   <stylesheets>
+      <URL value="@css/dashboard.css" />
+   </stylesheets>
 </AnchorPane>
