--- a/src/main/resources/segGroupCW/fileUpload.fxml
+++ b/src/main/resources/segGroupCW/fileUpload.fxml
@@ -2,61 +2,87 @@
 
 <?import com.jfoenix.controls.*?>
 <?import java.net.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.FileLoadController">
+<BorderPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.FileLoadController">
    <stylesheets>
       <URL value="@css/fileUpload.css" />
    </stylesheets>
-   <children>
-      <HBox alignment="CENTER" prefHeight="95.0" prefWidth="550.0">
-         <children>
-            <Label prefHeight="90.0" prefWidth="541.0" styleClass="text-primary" text="   AD AUCTION DASHBOARD" textAlignment="CENTER">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" layoutX="24.0" layoutY="371.0" prefHeight="30.0" prefWidth="503.0">
+   <top>
+      <VBox alignment="CENTER">
+         <HBox alignment="CENTER">
+            <children>
+               <Label styleClass="text-primary" text="AD AUCTION DASHBOARD" textAlignment="CENTER" wrapText="true">
+                  <font>
+                     <Font size="40.0" />
+                  </font>
+               </Label>
+            </children>
+            <VBox.margin>
+               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </VBox.margin>
+         </HBox>
+         <Label alignment="CENTER" contentDisplay="CENTER" styleClass="text-primary" text="Please Load your Files">
+            <font>
+               <Font size="20.0" />
+            </font>
+         </Label>
+         <padding>
+            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+         </padding>
+      </VBox>
+   </top>
+
+   <center>
+      <VBox alignment="CENTER" maxWidth="450.0">
+         <HBox alignment="CENTER_LEFT" spacing="25.0">
+            <children>
+               <TextField fx:id="clicksPathLabel" prefHeight="25.0" prefWidth="195.0" promptText="click_log.csv" />
+               <JFXButton fx:id="browseClicksBtn" alignment="CENTER" buttonType="RAISED" styleClass="btn-primary" text="Browse..." />
+               <Label styleClass="text-secondary" text="click_log.csv" />
+            </children>
+            <VBox.margin>
+               <Insets bottom="10.0" top="20.0" />
+            </VBox.margin>
+         </HBox>
+         <HBox alignment="CENTER_LEFT" spacing="25.0">
+            <children>
+               <TextField fx:id="imprPathLabel" prefHeight="25.0" prefWidth="194.0" promptText="impression_log.csv" />
+               <JFXButton fx:id="browseImprBtn" alignment="CENTER" buttonType="RAISED" styleClass="btn-primary" text="Browse..." />
+               <Label styleClass="text-secondary" text="impression_log.csv" />
+            </children>
+            <VBox.margin>
+               <Insets bottom="10.0" top="10.0" />
+            </VBox.margin>
+         </HBox>
+         <HBox alignment="CENTER_LEFT" spacing="25.0">
+            <children>
+               <TextField fx:id="serverPathLabel" prefHeight="25.0" prefWidth="194.0" promptText="server_log.csv" />
+               <JFXButton fx:id="browseServerBtn" alignment="CENTER" buttonType="RAISED" styleClass="btn-primary" text="Browse..." />
+               <Label styleClass="text-secondary" text="server_log.csv" />
+            </children>
+            <VBox.margin>
+               <Insets bottom="20.0" top="10.0" />
+            </VBox.margin>
+         </HBox>
+         <padding>
+            <Insets top="20.0" />
+         </padding>
+      </VBox>
+   </center>
+
+   <bottom>
+      <HBox alignment="CENTER">
          <children>
             <JFXButton fx:id="dashboardBtn" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#goToDashboard" styleClass="btn-submit" text="Go to Dashboard" />
          </children>
+         <BorderPane.margin>
+            <Insets bottom="20.0" top="10.0" />
+         </BorderPane.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="17.0" layoutY="183.0" prefHeight="25.0" prefWidth="452.0" spacing="30.0">
-         <children>
-            <TextField fx:id="clicksPathLabel" prefHeight="25.0" prefWidth="195.0" promptText="click_log.csv" />
-            <JFXButton fx:id="browseClicksBtn" alignment="CENTER" buttonType="RAISED" styleClass="btn-primary" text="Browse..." />
-            <Label styleClass="text-secondary" text="   click_log.csv" />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="17.0" layoutY="234.0" prefHeight="30.0" prefWidth="503.0" spacing="30.0">
-         <children>
-            <TextField fx:id="imprPathLabel" prefHeight="25.0" prefWidth="194.0" promptText="impression_log.csv" />
-            <JFXButton fx:id="browseImprBtn" alignment="CENTER" buttonType="RAISED" styleClass="btn-primary" text="Browse..." />
-            <Label styleClass="text-secondary" text="   impression_log.csv" />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="17.0" layoutY="284.0" prefHeight="30.0" prefWidth="503.0" spacing="30.0">
-         <children>
-            <TextField fx:id="serverPathLabel" prefHeight="25.0" prefWidth="194.0" promptText="server_log.csv" />
-            <JFXButton fx:id="browseServerBtn" alignment="CENTER" buttonType="RAISED" styleClass="btn-primary" text="Browse..." />
-            <Label styleClass="text-secondary" text="   server_log.csv" />
-         </children>
-      </HBox>
-      <Pane layoutX="26.0" layoutY="95.0" prefHeight="30.0" prefWidth="485.0">
-         <children>
-            <Label styleClass="text-primary" alignment="TOP_CENTER" layoutX="130.0" prefHeight="36.0" prefWidth="225.0" text="Please Load your Files">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-      <HBox alignment="CENTER" layoutX="24.0" layoutY="409.0" prefHeight="40.0" prefWidth="503.0">
+   </bottom>
 
-      </HBox>
-   </children>
-</AnchorPane>
+</BorderPane>
